# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.103 2005/04/16 19:09:31 allanonjl Exp $

*GLI-gtkfe-0.01 (11 Dec 2004)

  16 Apr 2005; John N. Laliberte <allanonjl@gentoo.org>
  Complete overhaul of RcDotConf.
  
  10 Apr 2005; John N. Laliberte <allanonjl@gentoo.org>
  Added check to ensure uid is an int and not a str.
  Changed named of root password button in gui, added
  a seperate reset button for root password.  Fixed
  warning about reparenting a widget.  Added popup
  error message if root passwords do not match.  Changed
  behavior so click on an item automatically selects
  it for editing, getting rid of the need for a button.
  
  09 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Major overhaul of partitioning code for overhauled GLIStorageDevice.

  03 Apr 2005; John N. Laliberte <allanonjl@gentoo.org>
  Fixed 2 bugs in Users.py.
  
  02 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Removed reiserfs from the supported filesystems

  02 Apr 2005; John N. Laliberte <allanonjl@gentoo.org>
  Users.py- put in password field for user adding, 
  loading from saved config file implemented.
  Networking.py, Timezone.py, fixed tab spacings.
  
  30 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Cleanup deactivate() in Users

  30 Mar 2005; John N. Laliberte <allanonjl@gentoo.org>
  Users.py is now half integrated into the backend (saving only).
  
  29 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added code to detect when the output logfile is moved and temporarily
  disabled the done/error dialogs.

  29 Mar 2005; John N. Laliberte <allanonjl@gentoo.org>
  Complete overhaul of Users.py.  UI is smart, but not yet integrated
  into the backend.

  28 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added install complete/error message boxes and a TextView for displaying
  output. Change /tmp/install.log back to /var/log/install.log
