@@ -1,9 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.103 2005/04/16 19:09:31 allanonjl Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.104 2005/04/17 00:27:42 allanonjl Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
+  16 Apr 2005; John N. Laliberte <allanonjl@gentoo.org>
+  Integrated RcDotConf into the backend.
+  
   16 Apr 2005; John N. Laliberte <allanonjl@gentoo.org>
   Complete overhaul of RcDotConf.
   
